# http-web-server

./: .gitignore  CMakeLists.txt  README.md
cmake/: CodeCoverageReportConfig.cmake
config/: default.config  gcloud.config
data/: test_users.json  users.json
docker/: Dockerfile  base.Dockerfile  cloudbuild.yaml  coverage.Dockerfile
frontend/: index.html  messages.html
include/: api_handler.h  config_parser.h  disk_file_store.h  dispatcher.h  echo_handler.h  fake_file_store.h  file_store.h  get_messages_handler.h  handler_registry.h  health_handler.h  http_types.h  login_handler.h  logout_handler.h  message_store.h  not_found_handler.h  post_message_handler.h  register_handler.h  request_handler.h  request_parser.h  response_builder.h  server.h  session.h  session_context.h  session_middleware_handler.h  session_store.h  sleep_handler.h  static_handler.h
src/: api_handler.cc  config_parser.cc  disk_file_store.cc  dispatcher.cc  echo_handler.cc  fake_file_store.cc  get_messages_handler.cc  handler_registry.cc  health_handler.cc  logger.cc  logger.h  login_handler.cc  logout_handler.cc  message_store.cc  not_found_handler.cc  post_message_handler.cc  register_handler.cc  request_parser.cc  response_builder.cc  server.cc  server_main.cc  session.cc  session_middleware_handler.cc  session_store.cc  sleep_handler.cc  static_handler.cc
static_files/: index.html  messages.html  test.html  test.txt
tests/: api_handler_test.cc  api_integration_test.sh  concurrent_integration_test.sh  config_parser_test.cc  dispatcher_test.cc  echo_handler_test.cc  get_messages_handler_integration_test.sh  get_messages_handler_test.cc  health_handler_integration_test.sh  health_handler_test.cc  integration_test.sh  logger_test.cc  login_handler_test.cc  logout_handler_integration_test.sh  logout_handler_test.cc  message_store_test.cc  not_found_handler_test.cc  not_found_integration_test.sh  parse_common_api_test.cc  post_message_handler_test.cc  register_handler_integration_test.sh  register_handler_test.cc  request_parser_test.cc  response_builder_test.cc  server_test.cc  session_middleware_test.cc  session_store_test.cc  static_handler_test.cc  static_integration_test.sh
